--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,10 @@ Version: 1.0.0
 Author: Jose Evandeilton Lopes (LOPES, J. E.)
 Maintainer: <evandeilton@gmail.com>
 Description: This package in pure R works with the lagrangian Katz Distribution and have among others, the functions dLKD, pLKD, qLKD and rLKD of this family of distribution.
-License: MIT
+License: GPL-3 | file LICENSE
 Encoding: UTF-8
-LazyData: true
-RoxygenNote: 6.0.1
+LazyData: false
+Imports:
+    MASS,
+    rootSolve
+RoxygenNote: 7.1.2
